added ui for change to kotlin

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
-rootProject.name = "IMDB CLONE"
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+    }
+}
+rootProject.name = "IMDB CLONE(Kotlin)"
 include ':app'
