--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
@@ -27,10 +20,10 @@ task clean(type: Delete) {
 ext{
     glide_version = '4.12.0'
     pagingVersion = '3.0.0-alpha05'
-    retrofitVersion = '2.9.0'
+    retrofit_version = '2.9.0'
     room_version = '2.3.0'
-    dagger_version= '2.21'
+    hilt_version= '2.38.1'
     rxjava_version= '3.0.0'
-    lifecycle_version='2.2.0'
+    lifecycle_version='2.3.1'
     nav_version='2.3.5'
 }
