--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
@@ -24,6 +25,6 @@ ext{
     room_version = '2.3.0'
     hilt_version= '2.38.1'
     rxjava_version= '3.0.0'
-    lifecycle_version='2.3.1'
+    lifecycle_version='2.2.0'
     nav_version='2.3.5'
 }
